configured data-translate for all html files

--- a/templates/docappointment.html
+++ b/templates/docappointment.html
@@ -22,7 +22,7 @@
         <div class="mdiv">
             <div>
                 <div>
-                    <h3>Choose Date</h3>
+                    <h3 data-translate>Choose Date</h3>
                 </div>
                 <div class="date-input-container">
                     <input type="date" id="calendarDate" name="calendarDate" placeholder="Choose date" required />
@@ -30,7 +30,7 @@
             </div>
             <div>
                 <div>
-                    <h3>Choose Time Slots</h3>
+                    <h3 data-translate>Choose Time Slots</h3>
                 </div>
                 <div class="checkbox-input-container">
                     <div>
@@ -49,7 +49,7 @@
             </div>
             <div>
                 <div>
-                    <h3>Choose Custom Time Slot (optional)</h3>
+                    <h3 data-translate>Choose Custom Time Slot (optional)</h3>
                 </div>
                 <div class="time-input-container">
                     <div>
