--- a/templates/doctorLogin.html
+++ b/templates/doctorLogin.html
@@ -52,10 +52,10 @@
                 <br>
                 <div class="remember-forgot">
                     <div>
-                        <a href="{{url_for('doctordashboard')}}">Create Account</a>
+                        <a href="{{url_for('doctordashboard')}}" data-translate>Create Account</a>
                     </div>
                     <div>
-                        <a href="{{url_for('doctordashboard')}}">Forgot Password?</a>
+                        <a href="{{url_for('doctordashboard')}}" data-translate>Forgot Password?</a>
                     </div>
                 </div>
                 <button type="submit" class="btn" data-translate>Login</button><br>
