--- a/templates/error.html
+++ b/templates/error.html
@@ -22,8 +22,8 @@
     </div>
 
     <div class="second">
-        <h3>The Page you are looking for dosn't currently exist or doesn't have a direct access.</h3>
-        <h3>Try Visiting the Main Website or kindly contact <span> vaidhya.co@gmail.com </span> for Further Instruction.</h3>
+        <h3 data-translate>The Page you are looking for dosn't currently exist or doesn't have a direct access.</h3>
+        <h3 data-translate>Try Visiting the Main Website or kindly contact <span> vaidhya.co@gmail.com </span> for Further Instruction.</h3>
 
     </div>
 
