--- a/templates/forgotpassword.html
+++ b/templates/forgotpassword.html
@@ -19,11 +19,11 @@
             <form method="POST" action="/forgotpassword/datafound" onsubmit="return forgot();">
 
                 <div class="text-name">
-                    <h2>Forgot Password </h2>
+                    <h2 data-translate>Forgot Password </h2>
                 </div>
                 <br>
                 <div class="input-box">
-                    <label for="login-username" class="lflu">Enter your username or email</label>
+                    <label for="login-username" class="lflu" data-translate>Enter your username or email</label>
                     <input type="text" required="required" id="login-username" name="login-username">
                 </div>
                 <br>
@@ -31,7 +31,7 @@
                 <button type="submit" class="btn" data-translate>Next</button><br>
 
                 {% if message %}
-                    <h4 class="h4warning">{{message}}</h4>
+                    <h4 class="h4warning" data-translate>{{message}}</h4>
                 {% endif %}
             </form>
 
