--- a/templates/patientReport.html
+++ b/templates/patientReport.html
@@ -51,34 +51,34 @@
             <table>
                 <thead>
                     <tr>
-                        <th scope="col">Field</th>
-                        <th scope="col">Information</th>
+                        <th scope="col" data-translate>Field</th>
+                        <th scope="col" data-translate>Information</th>
 
                     </tr>
                 </thead>
 
                 <tbody>
                     <tr>
-                        <th scope="row">Patient Name</th>
-                        <td>{{name}}</td>
+                        <th scope="row" data-translate>Patient Name</th>
+                        <td data-translate>{{name}}</td>
 
                     </tr>
                     <tr>
-                        <th scope="row">Patient ID</th>
-                        <td>{{ pid }}</td>
+                        <th scope="row" data-translate>Patient ID</th>
+                        <td data-translate>{{ pid }}</td>
 
                     </tr>
                     <tr>
-                        <th scope="row">Patient Age</th>
-                        <td>{{ age }}</td>
+                        <th scope="row" data-translate>Patient Age</th>
+                        <td data-translate>{{ age }}</td>
                     </tr>
                     <tr>
-                        <th scope="row">Test 1 (F)</th>
-                        <td>{{ sfeel }}</td>
+                        <th scope="row" data-translate>Test 1 (F)</th>
+                        <td data-translate>{{ sfeel }}</td>
                     </tr>
                     <tr>
-                        <th scope="row">Test 2 (T)</th>
-                        <td>{{ stest }}</td>
+                        <th scope="row" data-translate>Test 2 (T)</th>
+                        <td data-translate>{{ stest }}</td>
                     </tr>
                 </tbody>
             </table>
