--- a/templates/createpassword.html
+++ b/templates/createpassword.html
@@ -17,18 +17,18 @@
             <form method="POST" id="formcps" action="/createpasswordsuccessfull" onsubmit="return cps();">
 
                 <div class="text-name">
-                    <h2>Create Password</h2>
+                    <h2 data-translate>Create Password</h2>
                 </div>
                 <br>
                 <div>
-                    <h3>Enter Password</h3>
+                    <h3 data-translate>Enter Password</h3>
                 </div>
                 <div class="input-box">
                     <input type="password" required="required" id="password1" name="password1" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
                     title="Password must contain at least one uppercase letter, one lowercase letter, and one number, and be at least 8 characters long">
                 </div>
                 <div>
-                    <h3>Confirm Password</h3>
+                    <h3 data-translate>Confirm Password</h3>
                 </div>
                 <div class="input-box">
                     <input type="password" required="required" id="password2" name="password2" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" 
@@ -39,7 +39,7 @@
                 <button type="submit" class="btn" data-translate>Change Password</button><br>
 
                 {% if message %}
-                    <h4 class="h4warning">{{message}}</h4>
+                    <h4 class="h4warning" data-translate>{{message}}</h4>
                 {% endif %}
             </form>
 
