Implemented forgot password for doctor side

--- a/static/css/docotp.css
+++ b/static/css/docotp.css
@@ -5,14 +5,14 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-    
+
 }
 
-a{
-    outline: none;  
+a {
+    outline: none;
 }
 
-select{
+select {
     outline: none;
 }
 
@@ -25,66 +25,73 @@ body {
     background-position: center;
     margin: 0;
 
-     
+
 }
+
 .im {
     height: 30px;
     width: 30px;
-    display: block; 
-    margin: auto; 
+    display: block;
+    margin: auto;
 }
 
-.mid-box{
+.mid-box {
     width: 100%;
     height: calc(100vh - 88px);
     display: flex;
-    align-items: center; 
-    justify-content: center; 
+    align-items: center;
+    justify-content: center;
 }
 
 
-.wrapper{
+.wrapper {
     width: 420px;
     background: #fff;
-    border: 2px solid rgba(255,255,255,.2);
+    border: 2px solid rgba(255, 255, 255, .2);
     backdrop-filter: blur(20px);
-    box-shadow: 0 0 10px rgba(0,0,0,.2);
-    color:black;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+    color: black;
     border-radius: 10px;
     padding: 40px 40px;
 }
 
-.wrapper.input-box{
+.wrapper.input-box {
     width: 100%;
     height: 50px;
     margin: 30px 0;
-    
+
 }
-.input-box{
+
+.input-box {
     position: relative;
     margin-bottom: 20px;
-   
+    display: flex;
+    gap: 5px;
+    margin-top: 20px;
 }
-.input-box input{
-    width:100%;
+
+.input-box input {
+    width: 100%;
     padding: 10px;
-    background:#fff;
+    background: #fff;
     border: 1px solid rgba(27, 22, 22, 0.304);
     border-radius: 5px;
     outline: none;
     color: black;
     font-size: 1em;
     margin-top: 8px;
+    text-align: center;
 }
-.input-box input::placeholder{
-    color:black;
+
+.input-box input::placeholder {
+    color: black;
     font-size: bold;
 }
 
 .wrapper .btn {
     width: 100%;
     height: 45px;
-    background: #9dede1; 
+    background: #FFBE98;
     border: none;
     outline: none;
     border-radius: 4px;
@@ -93,51 +100,66 @@ body {
     font-size: 16px;
     color: #333;
     font-weight: 600;
-    transition:  0.3s ease ,transform 0.4s ease; 
+    transition: 0.3s ease, transform 0.4s ease;
 }
 
 .wrapper .btn:hover {
-    background:  #0dcaad; 
+    background: #F9B572;
 }
 
 .wrapper .btn:active {
-    transform: scale(0.85); 
+    transform: scale(0.85);
 }
 
-.wrapper .register-link{
+.wrapper .register-link {
     font-size: 14.5px;
     text-align: center;
     margin: 20px 0 15px;
 }
-.wrapper .register-link{
-    color:black;
+
+.wrapper .register-link {
+    color: black;
     text-decoration: none;
     font-weight: 600;
 }
-.register-link p a:hover{
-    text-decoration:underline;
+
+.register-link p a:hover {
+    text-decoration: underline;
 }
+
 .top-right-button-container {
     position: absolute;
     top: 15px;
     right: 20px;
-    
-}
-
-.text-name{
-padding: 1px;
 
 }
 
-.lflu{
+.text-name {
+    padding: 1px;
+
+}
+
+.lflu {
     margin: 2px;
     font-size: 15px;
 }
 
-.h4warning{
+.h4warning {
     color: red;
     font-weight: 800;
     margin-top: 15px;
+}
+
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
 }
 
 .logo-name{
@@ -156,11 +178,11 @@ padding: 1px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: #9dede1;
+    background: #FFBE98;
     padding: 20px;
 
 }
 
 .heading{
-    color: #333;
+    color: black;
 }
