--- a/templates/doctorLogin.html
+++ b/templates/doctorLogin.html
@@ -55,7 +55,7 @@
                         <a href="{{url_for('doctordashboard')}}" data-translate>Create Account</a>
                     </div>
                     <div>
-                        <a href="{{url_for('doctordashboard')}}" data-translate>Forgot Password?</a>
+                        <a href="{{url_for('docforgotpassword')}}" data-translate>Forgot Password?</a>
                     </div>
                 </div>
                 <button type="submit" class="btn" data-translate>Login</button><br>
