--- a/static/css/doccreatepassword.css
+++ b/static/css/doccreatepassword.css
@@ -84,7 +84,7 @@ body {
 .wrapper .btn {
     width: 100%;
     height: 45px;
-    background: #9dede1; 
+    background: #FFBE98; 
     border: none;
     outline: none;
     border-radius: 4px;
@@ -97,7 +97,7 @@ body {
 }
 
 .wrapper .btn:hover {
-    background:  #0dcaad; 
+    background:  #F9B572; 
 }
 
 .wrapper .btn:active {
@@ -156,11 +156,11 @@ padding: 1px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: #9dede1;
+    background: #FFBE98;
     padding: 20px;
 
 }
 
 .heading{
-    color: #333;
+    color: black;
 }
