--- a/static/css/forgotpassword.css
+++ b/static/css/forgotpassword.css
@@ -36,7 +36,7 @@ body {
 
 .mid-box{
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 88px);
     display: flex;
     align-items: center; 
     justify-content: center; 
@@ -138,4 +138,30 @@ padding: 1px;
     color: red;
     font-weight: 800;
     margin-top: 15px;
+}
+
+
+.logo-name{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 7px;
+
+}
+
+.logo-img{
+    height: 40px;
+}
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #9dede1;
+    padding: 20px;
+
+}
+
+.heading{
+    color: #333;
 }
