--- a/static/css/otp.css
+++ b/static/css/otp.css
@@ -37,7 +37,7 @@ body {
 
 .mid-box {
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 88px);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -160,4 +160,29 @@ input::-webkit-inner-spin-button {
 /* Firefox */
 input[type=number] {
     -moz-appearance: textfield;
+}
+
+.logo-name{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 7px;
+
+}
+
+.logo-img{
+    height: 40px;
+}
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #9dede1;
+    padding: 20px;
+
+}
+
+.heading{
+    color: #333;
 }
