--- a/templates/docforgotpassword.html
+++ b/templates/docforgotpassword.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=divice-width,intial-scale=1.0" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/forgotpassword.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/docforgotpassword.css') }}">
     <link rel="icon" type="image/icon" href="{{ url_for('static', filename='images/logo.ico') }}">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>ವೈDHया</title>
@@ -21,7 +21,7 @@
     
     <div class="mid-box">
         <div class="wrapper">
-            <form method="POST" action="/forgotpassword/datafound" onsubmit="return forgot();">
+            <form method="POST" action="/docforgotpassword/docdatafound" onsubmit="return docforgot();">
 
                 <div class="text-name">
                     <h2 data-translate>Forgot Password </h2>
@@ -44,7 +44,7 @@
 
     </div>
 
-    <script src="{{ url_for('static', filename='js/forgotpassword.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/docforgotpassword.js') }}"></script>
 </body>
 
 </html>
