--- a/templates/otp.html
+++ b/templates/otp.html
@@ -46,7 +46,9 @@
                 </div>
                 <br>
                 <br>
+                <button type="button" class="btn" id="resendBtn" onclick="reloadWindow()" data-translate>Resend</button>
                 <button type="submit" class="btn" data-translate>Verify</button><br>
+                
                 {% if message %}
                 <h4 class="h4warning" data-translate>{{message}}</h4>
                 {% endif %}
