--- a/templates/docotp.html
+++ b/templates/docotp.html
@@ -46,6 +46,7 @@
                 </div>
                 <br>
                 <br>
+                <button type="button" class="btn" id="resendBtn" onclick="reloadWindow()" data-translate>Resend</button>
                 <button type="submit" class="btn" data-translate>Verify</button><br>
                 {% if message %}
                 <h4 class="h4warning" data-translate>{{message}}</h4>
