--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
                 <br>
                 <div class="remember-forgot">
                     <div>
-                        <a href="{{url_for('doctordashboard')}}" data-translate>Create Account</a>
+                        <a href="{{url_for('newusername')}}" data-translate>Create Account</a>
                     </div>
                     <div>
                         <a href="{{url_for('forgotpassword')}}" data-translate>Forgot Password?</a>
