--- a/templates/doctorLogin.html
+++ b/templates/doctorLogin.html
@@ -52,7 +52,7 @@
                 <br>
                 <div class="remember-forgot">
                     <div>
-                        <a href="{{url_for('doctordashboard')}}" data-translate>Create Account</a>
+                        <a href="{{url_for('docnewusername')}}" data-translate>Create Account</a>
                     </div>
                     <div>
                         <a href="{{url_for('docforgotpassword')}}" data-translate>Forgot Password?</a>
