Implemented Doctor Account Creation

--- a/templates/docnewemail.html
+++ b/templates/docnewemail.html
@@ -45,7 +45,7 @@
 
     </div>
 
-    <script src="{{ url_for('static', filename='js/newusername.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/docnewemail.js') }}"></script>
 </body>
 
 </html>
