--- a/templates/doccreatenewpassword.html
+++ b/templates/doccreatenewpassword.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=divice-width,intial-scale=1.0" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/createnewpassword.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/doccreatenewpassword.css') }}">
     <link rel="icon" type="image/icon" href="{{ url_for('static', filename='images/logo.ico') }}">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>ವೈDHया</title>
@@ -20,7 +20,7 @@
     </div>
     <div class="mid-box">
         <div class="wrapper">
-            <form method="POST" id="formcps" action="/createaccount" onsubmit="return cps();">
+            <form method="POST" id="formcps" action="/doccreateaccount" onsubmit="return cps();">
 
                 <div class="text-name">
                     <h2 data-translate>Create Password</h2>
@@ -53,7 +53,7 @@
 
     </div>
 
-    <script src="{{ url_for('static', filename='js/createnewpassword.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/doccreatenewpassword.js') }}"></script>
 </body>
 
 </html>
