--- a/templates/newemail.html
+++ b/templates/newemail.html
@@ -45,7 +45,7 @@
 
     </div>
 
-    <script src="{{ url_for('static', filename='js/newusername.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/newemail.js') }}"></script>
 </body>
 
 </html>
