--- a/templates/accountinfo.html
+++ b/templates/accountinfo.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ವೈDHया</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/patientinfo.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/accountinfo.css') }}">
     <link rel="icon" type="image/icon" href="{{ url_for('static', filename='images/logo.ico') }}">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>ವೈDHया</title>
@@ -17,7 +17,7 @@
             <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo" class="logo-img">
             <h1 class="heading">ವೈDHया</h1>
         </div>
-        <a href="{{url_for('index')}}"><button data-translate>Home</button></a>
+        <a href="{{url_for('dashboard')}}"><button data-translate>Dashboard</button></a>
     </div>
 
     <div class="mid-box">
@@ -25,22 +25,30 @@
             <form method="POST" action="/savedetails" onsubmit="return savedetails();">
                 <h2>Enter Details</h2>
                 <div class="input-box">
-                    <input type="text" required="required" autocomplete="new-password" id="name">
+                    {% if patient_name %}
+                    <input type="text" required="required" autocomplete="new-password" id="name" value="{{patient_name}}">
                     <span style="font-weight: 700px;">Full Name</span>
+                    {% endif %}
                 </div>
+                {% if blood_group %}
+                <input type="hidden" id="blood-group-value" value="{{ blood_group }}">
+                {% endif %}
 
 
                 <div class="input-box">
-                    <input type="date" placeholder="DOB" autocomplete="new-password" id="DOB">
+                    {% if DOB %}
+                    <input type="date" placeholder="DOB" autocomplete="new-password" id="DOB" value="{{DOB}}">
                     <span>DOB</span>
+                    {% endif %}
                 </div>
 
                 <div class="input-bg">
+                    
                     <label for="blood-group" style="display: none;">Blood Group</label>
                     <select id="blood-group" class="dropbtn">
                         <option value="" disabled selected>Blood Group</option>
                         <option value="A+">A +</option>
-                        <option value="A+">A -</option>
+                        <option value="A-">A -</option>
                         <option value="B+">B +</option>
                         <option value="B-">B -</option>
                         <option value="AB+">AB +</option>
@@ -56,24 +64,29 @@
                         <a href="#">A-</a>
                         <a href="#">O-</a>
                     </div>
+                    
                 </div>
 
                 <div class="input-box">
-                    <input type="text" required="required" autocomplete="new-password" id="address">
+                    {% if address %}
+                    <input type="text" required="required" autocomplete="new-password" id="address" value="{{address}}">
                     <span style="font-weight: 700px;">Home Address</span>
+                    {% endif %}
                 </div>
 
 
                 <div class="input-box">
-                    <input type="text" required="required" autocomplete="new-password" id="contact-number" id="contact-number">
+                    {% if ph_number %}
+                    <input type="text" required="required" autocomplete="new-password" id="contact-number" id="contact-number" value="{{ph_number}}">
                     <span style="font-weight: 700px;">Contact Number</span>
+                    {% endif %}
                 </div>
 
                 <button type="submit" class="btn">Save Details</button><br>
             </form>
         </div>
     </div>
-    <script src="{{ url_for('static', filename='js/patientinfo.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/accountinfo.js') }}"></script>
 
 </body>
 
