Implemented Account Info Updates for Doctor Portal

--- a/templates/doctordashboard.html
+++ b/templates/doctordashboard.html
@@ -19,7 +19,10 @@
             <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo" class="logo-img">
             <h1 class="heading-nav">ವೈDHया</h1>
         </div>
-        <button class="logout" onclick="logout()" data-translate>Logout</button>
+        <div class="bk">
+            <button class="logout" onclick="fetchsave()" data-translate>Account</button>
+            <button class="logout" onclick="logout()" data-translate>Logout</button>
+        </div>
     </div>
 
     <h1 class="heading" data-translate>OUR SERVICES</h1>
