--- a/templates/docaccountinfo.html
+++ b/templates/docaccountinfo.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ವೈDHया</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/doctorinfo.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/docaccountinfo.css') }}">
     <link rel="icon" type="image/icon" href="{{ url_for('static', filename='images/logo.ico') }}">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>ವೈDHया</title>
@@ -25,14 +25,21 @@
             <div class="wrapper">
                 <h2>Enter Details</h2>
                 <div class="input-box">
-                    <input type="text" required="required" autocomplete="new-password" id="name">
+                    {% if doctor_name %}
+                    <input type="text" required="required" autocomplete="new-password" id="name" value="{{doctor_name}}">
                     <span style="font-weight: 700px;">Full Name</span>
+                    {% endif %}
                 </div>
 
+                {% if blood_group %}
+                <input type="hidden" id="blood-group-value" value="{{ blood_group }}">
+                {% endif %}
 
                 <div class="input-box">
-                    <input type="date" placeholder="DOB" autocomplete="new-password" id="DOB">
+                    {% if DOB %}
+                    <input type="date" placeholder="DOB" autocomplete="new-password" id="DOB" value="{{DOB}}">
                     <span>DOB</span>
+                    {% endif %}
                 </div>
 
                 <div class="input-bg">
@@ -42,7 +49,7 @@
                         <option value="A+">A +</option>
                         <option value="A-">A -</option>
                         <option value="B+">B +</option>
-                        <option value="B-">B -</option>
+                        <option value="B+">B -</option>
                         <option value="AB+">AB +</option>
                         <option value="AB-">AB -</option>
                         <option value="O+">O +</option>
@@ -59,42 +66,55 @@
                 </div>
 
                 <div class="input-box">
-                    <input type="text" required="required" autocomplete="new-password" id="address">
+                    {% if address %}
+                    <input type="text" required="required" autocomplete="new-password" id="address" value="{{address}}">
                     <span style="font-weight: 700px;">Home Address</span>
+                    {% endif %}
                 </div>
 
 
                 <div class="input-box">
+                    {% if ph_number %}
                     <input type="text" required="required" autocomplete="new-password" id="contact-number"
-                        id="contact-number">
+                        id="contact-number" value="{{ph_number}}">
                     <span style="font-weight: 700px;">Contact Number</span>
+                    {% endif %}
                 </div>
             </div>
             <div class="wrapperr">
-
                 <div class="input-box">
-                    <input type="text" required="required" autocomplete="new-password" id="licencenumber">
+                    {% if licence_number %}
+                    <input type="text" required="required" autocomplete="new-password" id="licencenumber" value="{{licence_number}}">
                     <span style="font-weight: 700px;">Licence Number</span>
+                    {% endif %}
                 </div>
 
                 <div class="input-box">
-                    <input type="number" required="required" autocomplete="new-password" id="aadhar">
+                    {% if aadhar %}
+                    <input type="number" required="required" autocomplete="new-password" id="aadhar" value="{{aadhar}}">
                     <span style="font-weight: 700px;">Aadhar Number</span>
+                    {% endif %}
                 </div>
 
                 <div class="input-box">
-                    <input type="text" required="required" autocomplete="new-password" id="consultancyaddress">
+                    {% if consultation_address %}
+                    <input type="text" required="required" autocomplete="new-password" id="consultancyaddress" value="{{consultation_address}}">
                     <span style="font-weight: 700px;">Consultancy Address</span>
+                    {% endif %}
                 </div>
 
                 <div class="input-box">
-                    <input type="text" required="required" autocomplete="new-password" id="consultancyroomnumber">
+                    {% if room %}
+                    <input type="text" required="required" autocomplete="new-password" id="consultancyroomnumber" value="{{room}}">
                     <span style="font-weight: 700px;">Consultency Room Number</span>
+                    {% endif %}
                 </div>
 
                 <div class="input-box">
-                    <input type="text" required="required" autocomplete="new-password" id="consultancylocation">
+                    {% if location %}
+                    <input type="text" required="required" autocomplete="new-password" id="consultancylocation" value="{{location}}">
                     <span style="font-weight: 700px;">Consultency Location</span>
+                    {% endif %}
                 </div>
 
                 <button type="submit" class="btn">Save Details</button><br>
@@ -103,7 +123,7 @@
         </form>
     </div>
 
-    <script src="{{ url_for('static', filename='js/doctorinfo.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/docaccountinfo.js') }}"></script>
 
 </body>
 
