--- a/templates/errorfetch.html
+++ b/templates/errorfetch.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ವೈDHया</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/error.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/errorfetch.css') }}">
     <link rel="icon" type="image/icon" href="{{ url_for('static', filename='images/logo.ico') }}">
 </head>
 
@@ -18,16 +18,16 @@
     </div>
 
     <div class="names-heading">
-        <h1 data-translate class="h1">Error 404</h1>
+        <h1 data-translate class="h1">Error 500</h1>
     </div>
 
     <div class="second">
-        <h3 data-translate>The Page you are looking for dosn't currently exist or doesn't have a direct access.</h3>
+        <h3 data-translate>Internal Server Error</h3>
         <h3 data-translate>Try Visiting the Main site or kindly contact <span> vaidhya.co@gmail.com </span> for Further Instruction.</h3>
 
     </div>
 
-    <script src="{{ url_for('static', filename='js/error.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/errorfetch.js') }}"></script>
 </body>
 
 </html>
