--- a/static/css/prediction.css
+++ b/static/css/prediction.css
@@ -61,24 +61,32 @@ body {
     border-radius: 10px;
     border: none;
     font-size: 16px;
-    padding-left: 20px;
+    padding-left: 40px;
     border: 1px solid #9D9D9D;
     box-sizing: border-box;
     margin-bottom: 10px;
     font-family: 'Poppins', sans-serif;
 }
 
+
 .form-group input[type="submit"] {
     width: 100%;
     padding: 10px;
     border-radius: 5px;
+    font-weight: 500;
     border: none;
     background-color: #F9B572;
     color: #fff;
+    /* color: #333A73; */
     font-size: 16px;
-    font-weight: bold;
     cursor: pointer;
     font-family: 'Poppins', sans-serif;
+}
+
+.form-group input[type="submit"]:hover{
+    /* background-color: #F9B572; */
+    font-weight: 900;
+
 }
 
 .right-section {
