--- a/templates/doctorLogin.html
+++ b/templates/doctorLogin.html
@@ -49,6 +49,9 @@
                     <input type="password" required="required" id="login-password" name="password">
                     <span style="font-weight: 700px;" data-translate>Password</span>
                 </div>
+                {% if message %}
+                <h5 class="h4warning" data-translate>{{message}}</h5>
+                {% endif %}
                 <br>
                 <div class="remember-forgot">
                     <div>
