--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -23,7 +23,7 @@
     <a href="{{url_for('dashboard')}}"><button data-translate>Dashboard</button></a>
   </div>
   </div>
-  <h1 class="heading-1" data-translate data-translate>Welcome to Your Wellness Hub: Let's Talk About How You're Feeling
+  <h1 class="heading-1" data-translate>Welcome to Your Wellness Hub Let's Talk About How You're Feeling
     Today</h1>
   <!-- Left Section - Creative Registration Form -->
   <p class="description" data-translate>Your mental health companion - a supportive chatbot offering understanding and
@@ -38,7 +38,7 @@
             <input type="text" id="feeling" name="feeling" data-translate placeholder="How are you doing today?" >
           </div>
           <div class="form-group">
-            <input type="submit" value="Submit" data-translate>
+            <button type="submit" class="submit-button" data-translate>Submit</button>
           </div>
         </form>
       </div>
@@ -64,7 +64,7 @@
       </div>
     </div>
   </div>
-  <script src="{{ url_for('static', filename='css/prediction.css') }}"></script>
+  <script src="{{ url_for('static', filename='js/prediction.js') }}"></script>
 </body>
 
 </html>
