--- a/static/css/mcq.css
+++ b/static/css/mcq.css
@@ -41,7 +41,7 @@ form {
     border-radius: 5px;
 }
 
-.button {
+.submit-button {
     position: absolute;
     padding: 10px;
     border: none;
@@ -65,7 +65,7 @@ form {
     margin-top: 20px;
 }
 
-.button:hover{
+.submit-button:hover{
     background-color:rgb(0, 56, 124); 
     cursor: pointer;
 }
@@ -93,7 +93,7 @@ form {
     color: #3468C0;
     font-size: 18px;
     width: 40%;
-    height: 730px;
+    height: 800px;
     margin: 50px;
     border: 1px solid #3468C0;
 }
@@ -116,7 +116,7 @@ br{
     margin-bottom: 200px;
 }
 
-button{
+.dash-button{
     background-color: white;
     color: #40A2E3;
     border: none;
@@ -129,7 +129,7 @@ button{
     margin-right: 20px;
 }
 
-button:hover{
+.dash-button:hover{
     font-weight: 900;
 }   
   
