--- a/templates/about.html
+++ b/templates/about.html
@@ -38,15 +38,15 @@
           </li>
 
           <li class="header__link-wrapper">
-            <a href="#services" class="header__link">
+            <a href="#services" class="header__link" data-translate>
               Services
             </a>
           </li>
           <li class="header__link-wrapper">
-            <a href="#contact" class="header__link" data-translate> Contact & FAQ's </a>
+            <a href="#contact" class="header__link" data-translate> Contact </a>
           </li>
           <li class="header__link-wrapper">
-            <a href="{{url_for('login')}}" class="header__link" id="login" data-translate> LOG IN </a>
+            <a href="{{url_for('login')}}" class="header__link" id="login" data-translate> Login </a>
           </li>
         </ul>
 
@@ -104,13 +104,7 @@
             <p class="about__content-details-para" data-translate>
               Hey! It's
               <strong>ವೈDHया</strong>
-              a digital tool designed to provide quick and reliable medical information and guidance. It offers services
-              such as symptom checking, general health advice, first aid instructions, medication information, and even
-              appointment scheduling. Powered by a robust knowledge base and natural language processing, it's
-              accessible through various platforms. However, it's essential to remember that a Medi Bot is not a
-              replacement for professional medical advice and should be used for informational purposes only. Privacy
-              and security of user data are prioritized, and the bot continually updates its knowledge to stay current
-              with medical advancements.
+              The Medi Bot is a digital tool that helps you with health stuff. It can check symptoms, give advice on staying healthy, tell you what to do in emergencies, and even help you book appointments. It works on different devices. But remember, it's not the same as talking to a real doctor, so use it for info only. Your privacy is important, and the Medi Bot always keeps up with the latest medical info to help you better.
             </p>
             <div class="about__content-skills">
               <h3 class="about__content-title" data-translate>Tech Stacks</h3>
@@ -218,7 +212,7 @@
               id="name">
           </div>
           <div class="contact__form-field">
-            <label class="contact__form-label" for="email" data-translate>Email</label>
+            <label class="contact__form-label" for="email">Email</label>
             <input required="" placeholder="Enter Your Email" type="text" class="contact__form-input" name="email"
               id="email">
           </div>
@@ -380,7 +374,7 @@
           </button>
           <div class="pannel">
             <p data-translate>
-              A brain injury itself isnâ€™t the same as a mental illness, though someone who experiences a brain injury
+              A brain injury itself isn't the same as a mental illness, though someone who experiences a brain injury
               may also experience mental health problems. These mental health problems may stem from the injury itself
               or from thoughts around the injury (like feelings of loss, anger, or frustration when quality of life
               changes). In some cases, mental health challenges may not be related to a brain injury at all. The good
