--- a/templates/chatbot.html
+++ b/templates/chatbot.html
@@ -23,17 +23,17 @@
 
         <div class="main-conc">
             <div class="left-part">
-                    <h2>Vaidhya Assistant</h2>
-                    <p>It is a Personalized AI Assistant, capable of answering any queries related to :</p>
-                    <ul>
-                        <li>Depression</li>
-                        <li>Anxiety Disorders</li>
-                        <li>Schizophrenia</li>
-                        <li>Bipolar Disorder</li>
-                        <li>Obsessive-Compulsive Disorder (OCD)</li>
-                        <li>Post-Traumatic Stress Disorder (PTSD)</li>
+                    <h2 data-translate>Vaidhya Assistant</h2>
+                    <p data-translate>It is a Personalized AI Assistant, capable of answering any queries related to :</p>
+                    <ul >
+                        <li data-translate>Depression</li>
+                        <li data-translate>Anxiety Disorders</li>
+                        <li data-translate>Schizophrenia</li>
+                        <li data-translate>Bipolar Disorder</li>
+                        <li data-translate>Obsessive-Compulsive Disorder (OCD)</li>
+                        <li data-translate>Post-Traumatic Stress Disorder (PTSD)</li>
                     </ul>
-                    <p>The Bot can only answere medical related queries so try to ask relevent questions.</p>
+                    <p data-translate>The Bot can only answere medical related queries so try to ask relevent questions.</p>
             </div>
             <div class="chat-container">
                 <div class="chat-box" id="chatbox">
@@ -53,7 +53,7 @@
                     </div>
                     <div class="chat-box-footer">
                         <!-- <input placeholder="Send a message..." type="text" onkeydown="sendMessage(event)" data-translate /> -->
-                        <textarea placeholder="Ask a Question..." id="to-be-sent" onkeydown="sendMessage(event)" data-translate></textarea>
+                        <textarea placeholder="Ask a Question..." id="to-be-sent" onkeydown="sendMessage(event)" ></textarea>
                         <!-- <i class="send far fa-paper-plane" ></i> -->
                         <span class="material-symbols-outlined" onclick="sendMessageClick()">send</span>
 
