--- a/templates/docappointment.html
+++ b/templates/docappointment.html
@@ -53,11 +53,11 @@
                 </div>
                 <div class="time-input-container">
                     <div>
-                        <label for="timea">From:</label>
+                        <label for="timea" data-translate>From:</label>
                         <input type="time" id="timea" name="timea" min="07:00" max="20:00" />
                     </div>
                     <div>
-                        <label for="timeb">Till:</label>
+                        <label for="timeb" data-translate>Till:</label>
                         <input type="time" id="timeb" name="timeb" min="07:00" max="20:00" />
                     </div>
                 </div>
