--- a/templates/accountinfo.html
+++ b/templates/accountinfo.html
@@ -23,11 +23,11 @@
     <div class="mid-box">
         <div class="wrapper">
             <form method="POST" action="/savedetails" onsubmit="return savedetails();">
-                <h2>Enter Details</h2>
+                <h2 data-translate>Enter Details</h2>
                 <div class="input-box">
                     {% if patient_name %}
                     <input type="text" required="required" autocomplete="new-password" id="name" value="{{patient_name}}">
-                    <span style="font-weight: 700px;">Full Name</span>
+                    <span style="font-weight: 700px;" data-translate>Full Name</span>
                     {% endif %}
                 </div>
                 {% if blood_group %}
@@ -38,15 +38,15 @@
                 <div class="input-box">
                     {% if DOB %}
                     <input type="date" placeholder="DOB" autocomplete="new-password" id="DOB" value="{{DOB}}">
-                    <span>DOB</span>
+                    <span data-translate>DOB</span>
                     {% endif %}
                 </div>
 
                 <div class="input-bg">
                     
-                    <label for="blood-group" style="display: none;">Blood Group</label>
+                    <label for="blood-group" style="display: none;" data-translate>Blood Group</label>
                     <select id="blood-group" class="dropbtn">
-                        <option value="" disabled selected>Blood Group</option>
+                        <option value="" disabled selected data-translate>Blood Group</option>
                         <option value="A+">A +</option>
                         <option value="A-">A -</option>
                         <option value="B+">B +</option>
@@ -57,12 +57,14 @@
                         <option value="O-">O -</option>
                     </select>
                     <div class="dropdown-content">
-                        <a href="#">A+</a>
-                        <a href="#">O+</a>
-                        <a href="#">AB+</a>
-                        <a href="#">AB-</a>
-                        <a href="#">A-</a>
-                        <a href="#">O-</a>
+                        <a href="#">A +</a>
+                        <a href="#">A -</a>
+                        <a href="#">B +</a>
+                        <a href="#">B -</a>
+                        <a href="#">AB +</a>
+                        <a href="#">AB -</a>
+                        <a href="#">O +</a>
+                        <a href="#">O -</a>
                     </div>
                     
                 </div>
@@ -70,7 +72,7 @@
                 <div class="input-box">
                     {% if address %}
                     <input type="text" required="required" autocomplete="new-password" id="address" value="{{address}}">
-                    <span style="font-weight: 700px;">Home Address</span>
+                    <span style="font-weight: 700px;" data-translate>Home Address</span>
                     {% endif %}
                 </div>
 
@@ -78,11 +80,11 @@
                 <div class="input-box">
                     {% if ph_number %}
                     <input type="text" required="required" autocomplete="new-password" id="contact-number" id="contact-number" value="{{ph_number}}">
-                    <span style="font-weight: 700px;">Contact Number</span>
+                    <span style="font-weight: 700px;" data-translate>Contact Number</span>
                     {% endif %}
                 </div>
 
-                <button type="submit" class="btn">Save Details</button><br>
+                <button type="submit" class="btn" data-translate>Save Details</button><br>
             </form>
         </div>
     </div>
