--- a/templates/appointment.html
+++ b/templates/appointment.html
@@ -15,11 +15,11 @@
             <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo" class="logo-img">
             <h1 class="heading">ವೈDHया</h1>
         </div>
-        <a href="{{url_for('dashboard')}}"><button data-translate>Dashboard</button></a>
+        <a href="{{url_for('dashboard')}}"><button class="dash" data-translate>Dashboard</button></a>
     </div>
 
     <div class="names-heading">
-        <h2 data-translate>Book an Appointment Here: </h2>
+        <h2 data-translate>Book an Appointment Here : </h2>
         {% if doctor_name %}
         <h3 data-translate>Dr. {{ doctor_name }}</h3>
         {% else %}
@@ -29,12 +29,12 @@
     <div>
         <div class="tab">
             {% for date, slots_availability in dates_with_availability %}
-            <button class="tablinks" onclick="opentime(event, '{{ date }}')" data-translate>{{ date }}</button>
+            <button class="tablinks" onclick="opentime(event, '{{ date }}')">{{ date }}</button>
             {% endfor %}
         </div>
 
         {% for date, slots_availability in dates_with_availability %}
-        <div id= '{{ date }}' class="tabcontent" data-translate>
+        <div id= '{{ date }}' class="tabcontent">
             <h3 data-translate>Appointment Form for {{ date }}</h3>
             <div class="login-box">
                 <form method="POST" action="/appointment/submitted" onsubmit="return appointment_get('{{ date }}');">
@@ -79,7 +79,7 @@
         
                     </div>
                     <div class="flex_justy_between">
-                        <input type="submit" value="Submit" data-translate>
+                        <button type="submit" class="submit-button" data-translate>Save Details</button>
                     </div>
                 </form>
             </div>
