--- a/templates/docaccountinfo.html
+++ b/templates/docaccountinfo.html
@@ -17,17 +17,17 @@
             <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo" class="logo-img">
             <h1 class="heading">ವೈDHया</h1>
         </div>
-        <a href="{{url_for('index')}}"><button data-translate>Home</button></a>
+        <a href="{{url_for('doctordashboard')}}"><button data-translate>Dashboard</button></a>
     </div>
 
     <div class="mid-box">
         <form method="POST" action="/docsavedetails" onsubmit="return docsavedetails();">
             <div class="wrapper">
-                <h2>Enter Details</h2>
+                <h2 data-translate>Enter Details</h2>
                 <div class="input-box">
                     {% if doctor_name %}
                     <input type="text" required="required" autocomplete="new-password" id="name" value="{{doctor_name}}">
-                    <span style="font-weight: 700px;">Full Name</span>
+                    <span style="font-weight: 700px;" data-translate>Full Name</span>
                     {% endif %}
                 </div>
 
@@ -38,37 +38,39 @@
                 <div class="input-box">
                     {% if DOB %}
                     <input type="date" placeholder="DOB" autocomplete="new-password" id="DOB" value="{{DOB}}">
-                    <span>DOB</span>
+                    <span data-translate>DOB</span>
                     {% endif %}
                 </div>
 
                 <div class="input-bg">
-                    <label for="blood-group" style="display: none;">Blood Group</label>
+                    <label for="blood-group" style="display: none;" data-translate>Blood Group</label>
                     <select id="blood-group" class="dropbtn">
-                        <option value="" disabled selected>Blood Group</option>
+                        <option value="" disabled selected data-translate>Blood Group</option>
                         <option value="A+">A +</option>
                         <option value="A-">A -</option>
                         <option value="B+">B +</option>
-                        <option value="B+">B -</option>
+                        <option value="B-">B -</option>
                         <option value="AB+">AB +</option>
                         <option value="AB-">AB -</option>
                         <option value="O+">O +</option>
                         <option value="O-">O -</option>
                     </select>
                     <div class="dropdown-content">
-                        <a href="#">A+</a>
-                        <a href="#">O+</a>
-                        <a href="#">AB+</a>
-                        <a href="#">AB-</a>
-                        <a href="#">A-</a>
-                        <a href="#">O-</a>
+                        <a href="#">A +</a>
+                        <a href="#">A -</a>
+                        <a href="#">B +</a>
+                        <a href="#">B -</a>
+                        <a href="#">AB +</a>
+                        <a href="#">AB -</a>
+                        <a href="#">O +</a>
+                        <a href="#">O -</a>
                     </div>
                 </div>
 
                 <div class="input-box">
                     {% if address %}
                     <input type="text" required="required" autocomplete="new-password" id="address" value="{{address}}">
-                    <span style="font-weight: 700px;">Home Address</span>
+                    <span style="font-weight: 700px;" data-translate>Home Address</span>
                     {% endif %}
                 </div>
 
@@ -77,7 +79,7 @@
                     {% if ph_number %}
                     <input type="text" required="required" autocomplete="new-password" id="contact-number"
                         id="contact-number" value="{{ph_number}}">
-                    <span style="font-weight: 700px;">Contact Number</span>
+                    <span style="font-weight: 700px;" data-translate>Contact Number</span>
                     {% endif %}
                 </div>
             </div>
@@ -85,39 +87,39 @@
                 <div class="input-box">
                     {% if licence_number %}
                     <input type="text" required="required" autocomplete="new-password" id="licencenumber" value="{{licence_number}}">
-                    <span style="font-weight: 700px;">Licence Number</span>
+                    <span style="font-weight: 700px;" data-translate>Licence Number</span>
                     {% endif %}
                 </div>
 
                 <div class="input-box">
                     {% if aadhar %}
                     <input type="number" required="required" autocomplete="new-password" id="aadhar" value="{{aadhar}}">
-                    <span style="font-weight: 700px;">Aadhar Number</span>
+                    <span style="font-weight: 700px;" data-translate>Aadhar Number</span>
                     {% endif %}
                 </div>
 
                 <div class="input-box">
                     {% if consultation_address %}
                     <input type="text" required="required" autocomplete="new-password" id="consultancyaddress" value="{{consultation_address}}">
-                    <span style="font-weight: 700px;">Consultancy Address</span>
+                    <span style="font-weight: 700px;" data-translate>Consultancy Address</span>
                     {% endif %}
                 </div>
 
                 <div class="input-box">
                     {% if room %}
                     <input type="text" required="required" autocomplete="new-password" id="consultancyroomnumber" value="{{room}}">
-                    <span style="font-weight: 700px;">Consultency Room Number</span>
+                    <span style="font-weight: 700px;" data-translate>Consultency Room Number</span>
                     {% endif %}
                 </div>
 
                 <div class="input-box">
                     {% if location %}
                     <input type="text" required="required" autocomplete="new-password" id="consultancylocation" value="{{location}}">
-                    <span style="font-weight: 700px;">Consultency Location</span>
+                    <span style="font-weight: 700px;" data-translate>Consultency Location</span>
                     {% endif %}
                 </div>
 
-                <button type="submit" class="btn">Save Details</button><br>
+                <button type="submit" class="btn" data-translate>Save Details</button><br>
             </div>
 
         </form>
