--- a/templates/doctorinfo.html
+++ b/templates/doctorinfo.html
@@ -23,22 +23,22 @@
     <div class="mid-box">
         <form method="POST" action="/docsavedetails" onsubmit="return docsavedetails();">
             <div class="wrapper">
-                <h2>Enter Details</h2>
+                <h2 data-translate>Enter Details</h2>
                 <div class="input-box">
                     <input type="text" required="required" autocomplete="new-password" id="name">
-                    <span style="font-weight: 700px;">Full Name</span>
+                    <span style="font-weight: 700px;" data-translate>Full Name</span>
                 </div>
 
 
                 <div class="input-box">
                     <input type="date" placeholder="DOB" autocomplete="new-password" id="DOB">
-                    <span>DOB</span>
+                    <span data-translate>DOB</span>
                 </div>
 
                 <div class="input-bg">
-                    <label for="blood-group" style="display: none;">Blood Group</label>
+                    <label for="blood-group" style="display: none;" data-translate>Blood Group</label>
                     <select id="blood-group" class="dropbtn">
-                        <option value="" disabled selected>Blood Group</option>
+                        <option value="" disabled selected data-translate>Blood Group</option>
                         <option value="A+">A +</option>
                         <option value="A-">A -</option>
                         <option value="B+">B +</option>
@@ -60,44 +60,44 @@
 
                 <div class="input-box">
                     <input type="text" required="required" autocomplete="new-password" id="address">
-                    <span style="font-weight: 700px;">Home Address</span>
+                    <span style="font-weight: 700px;" data-translate>Home Address</span>
                 </div>
 
 
                 <div class="input-box">
                     <input type="text" required="required" autocomplete="new-password" id="contact-number"
                         id="contact-number">
-                    <span style="font-weight: 700px;">Contact Number</span>
+                    <span style="font-weight: 700px;" data-translate>Contact Number</span>
                 </div>
             </div>
             <div class="wrapperr">
 
                 <div class="input-box">
                     <input type="text" required="required" autocomplete="new-password" id="licencenumber">
-                    <span style="font-weight: 700px;">Licence Number</span>
+                    <span style="font-weight: 700px;" data-translate>Licence Number</span>
                 </div>
 
                 <div class="input-box">
                     <input type="number" required="required" autocomplete="new-password" id="aadhar">
-                    <span style="font-weight: 700px;">Aadhar Number</span>
+                    <span style="font-weight: 700px;" data-translate>Aadhar Number</span>
                 </div>
 
                 <div class="input-box">
                     <input type="text" required="required" autocomplete="new-password" id="consultancyaddress">
-                    <span style="font-weight: 700px;">Consultancy Address</span>
+                    <span style="font-weight: 700px;" data-translate>Consultancy Address</span>
                 </div>
 
                 <div class="input-box">
                     <input type="text" required="required" autocomplete="new-password" id="consultancyroomnumber">
-                    <span style="font-weight: 700px;">Consultency Room Number</span>
+                    <span style="font-weight: 700px;" data-translate>Consultency Room Number</span>
                 </div>
 
                 <div class="input-box">
                     <input type="text" required="required" autocomplete="new-password" id="consultancylocation">
-                    <span style="font-weight: 700px;">Consultency Location</span>
+                    <span style="font-weight: 700px;" data-translate>Consultency Location</span>
                 </div>
 
-                <button type="submit" class="btn">Save Details</button><br>
+                <button type="submit" class="btn" data-translate>Save Details</button><br>
             </div>
 
         </form>
