--- a/templates/patientinfo.html
+++ b/templates/patientinfo.html
@@ -23,22 +23,22 @@
     <div class="mid-box">
         <div class="wrapper">
             <form method="POST" action="/savedetails" onsubmit="return savedetails();">
-                <h2>Enter Details</h2>
+                <h2 data-translate>Enter Details</h2>
                 <div class="input-box">
                     <input type="text" required="required" autocomplete="new-password" id="name">
-                    <span style="font-weight: 700px;">Full Name</span>
+                    <span style="font-weight: 700px;" data-translate>Full Name</span>
                 </div>
 
 
                 <div class="input-box">
-                    <input type="date" placeholder="DOB" autocomplete="new-password" id="DOB">
-                    <span>DOB</span>
+                    <input type="date" placeholder="DOB" autocomplete="new-password" id="DOB" data-translate>
+                    <span data-translate>DOB</span>
                 </div>
 
                 <div class="input-bg">
-                    <label for="blood-group" style="display: none;">Blood Group</label>
+                    <label for="blood-group" style="display: none;" data-translate>Blood Group</label>
                     <select id="blood-group" class="dropbtn">
-                        <option value="" disabled selected>Blood Group</option>
+                        <option value="" disabled selected data-translate>Blood Group</option>
                         <option value="A+">A +</option>
                         <option value="A+">A -</option>
                         <option value="B+">B +</option>
@@ -60,16 +60,16 @@
 
                 <div class="input-box">
                     <input type="text" required="required" autocomplete="new-password" id="address">
-                    <span style="font-weight: 700px;">Home Address</span>
+                    <span style="font-weight: 700px;" data-translate>Home Address</span>
                 </div>
 
 
                 <div class="input-box">
                     <input type="text" required="required" autocomplete="new-password" id="contact-number" id="contact-number">
-                    <span style="font-weight: 700px;">Contact Number</span>
+                    <span style="font-weight: 700px;" data-translate>Contact Number</span>
                 </div>
 
-                <button type="submit" class="btn">Save Details</button><br>
+                <button type="submit" class="btn" data-translate>Save Details</button><br>
             </form>
         </div>
     </div>
