Implemented Delete Account through Admin

--- a/templates/doctordashboard.html
+++ b/templates/doctordashboard.html
@@ -21,6 +21,7 @@
         </div>
         <div class="bk">
             <button class="logout" onclick="fetchsave()" data-translate>Account</button>
+            <button class="logout" onclick="admin()" data-translate>Delete Account</button>
             <button class="logout" onclick="logout()" data-translate>Logout</button>
         </div>
     </div>
