--- a/templates/error.html
+++ b/templates/error.html
@@ -18,7 +18,10 @@
     </div>
 
     <div class="names-heading">
-        <h1 data-translate class="h1">Error 404</h1>
+        <video autoplay muted loop>
+            <source src="{{ url_for('static', filename='videos/error404.mp4') }}" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
     </div>
 
     <div class="second">
