--- a/templates/createpassword.html
+++ b/templates/createpassword.html
@@ -23,7 +23,7 @@
             <form method="POST" id="formcps" action="/createpasswordsuccessfull" onsubmit="return cps();">
 
                 <div class="text-name">
-                    <h2 data-translate>Create Password</h2>
+                    <h2 data-translate>Change Password</h2>
                 </div>
                 <br>
                 <div>
