--- a/templates/otp.html
+++ b/templates/otp.html
@@ -32,17 +32,17 @@
                 </div>
                 <div class="input-box">
                     <input type="number" id="input1" maxlength="1" name="input1"
-                        oninput="handleInput(this, document.getElementById('input2'))">
+                        oninput="handleInput(this, document.getElementById('input2'))" required>
                     <input type="number" id="input2" maxlength="1" name="input2"
-                        oninput="handleInput(this, document.getElementById('input3'))">
+                        oninput="handleInput(this, document.getElementById('input3'))" required>
                     <input type="number" id="input3" maxlength="1" name="input3"
-                        oninput="handleInput(this, document.getElementById('input4'))">
+                        oninput="handleInput(this, document.getElementById('input4'))" required>
                     <input type="number" id="input4" maxlength="1" name="input4"
-                        oninput="handleInput(this, document.getElementById('input5'))">
+                        oninput="handleInput(this, document.getElementById('input5'))" required>
                     <input type="number" id="input5" maxlength="1" name="input5"
-                        oninput="handleInput(this, document.getElementById('input6'))">
+                        oninput="handleInput(this, document.getElementById('input6'))" required>
                     <input type="number" id="input6" maxlength="1" name="input6"
-                        oninput="handleInput(this, document.getElementById('input7'))">
+                        oninput="handleInput(this, document.getElementById('input7'))" required>
                 </div>
                 <br>
                 <br>
