--- a/static/css/docappointment.css
+++ b/static/css/docappointment.css
@@ -65,9 +65,9 @@ body {
 
 .main_div {
     display: flex;
-    justify-content: space-around; /* Adjust as needed */
-    align-items: flex-start; /* Align items at the start of the cross axis */
-    flex-wrap: wrap; /* Allow items to wrap to the next row if there's not enough space */
+    justify-content: space-around;
+    align-items: flex-start;
+    flex-wrap: wrap;
 }
 
 .logo-name{
@@ -116,7 +116,7 @@ form{
     border-radius: 4px;
     box-sizing: border-box;
     font-size: 16px;
-    text-align: center; /* Center text horizontally within the input field */
+    text-align: center;
 }
 
 #calendarDate{
