--- a/static/css/predic.css
+++ b/static/css/predic.css
@@ -15,12 +15,12 @@ body {
   background-size: cover;
   background-position: center;
   font-family: 'Poppins', sans-serif;
-  margin: 0; /* Remove default margin */
-  padding: 0; /* Remove default padding */
+  margin: 0;
+  padding: 0;
 
 }
 
-/* CSS for the navigation bar */
+
 .navbar {
   display: flex;
   justify-content: space-between;
