--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,18 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-/*
-0 - 600px:      Phone
-600 - 900px:    Tablet portrait
-900 - 1200px:   Tablet landscape
-[1200 - 1800] is where our normal styles apply
-1800px + :      Big desktop
-$breakpoint arguement choices:
-- phone
-- tab-port
-- tab-land
-- big-desktop
 
-Inside media queries 1em is always 16px i.e 1em = 16px at every screen size only inside media queries
-*/
 *,
 *::after,
 *::before {
@@ -488,12 +475,12 @@ textarea {
   background: #e5e1da;
   border-radius: 5px;
   font-weight: 600;
-  /* Code for Modern Browsers */
-  /* Code for WebKit, Blink, Edge */
-  /* Code for Internet Explorer 10-11 */
-  /* Code for Microsoft Edge */
-  /* Code for Mozilla Firefox 4 to 18 */
-  /* Code for Mozilla Firefox 19+ */
+ 
+ 
+ 
+ 
+ 
+ 
 }
 .contact__form-input::placeholder {
   color: #999;
@@ -687,14 +674,14 @@ textarea {
   color: #92c7cf;
 }
 
-/* Change the button color on hover */
+
 
 #login {
   display: inline-block;
   padding: 10px 20px;
   margin-top: 1.5rem;
-  background-color: #92c7cf; /* Button color */
-  color: #fbf9f1; /* Text color */
+  background-color: #92c7cf;
+  color: #fbf9f1;
   text-decoration: none;
   border-radius: 5px;
   transition: background-color 0.3s ease;
@@ -755,8 +742,8 @@ textarea {
 #login {
   display: inline-block;
   padding: 10px 20px;
-  background-color: #92c7cf; /* Button color */
-  color: #fbf9f1; /* Text color */
+  background-color: #92c7cf;
+  color: #fbf9f1;
   text-decoration: none;
   border-radius: 5px;
   transition: background-color 0.3s ease;
@@ -970,12 +957,12 @@ textarea {
   color: #ffffff;
   cursor: pointer;
   transition: max-height 0.3s ease-in-out;
-  max-height: 30px; /* Set the initial max-height */
+  max-height: 30px;
   overflow: hidden;
 }
 
 .faq-question:hover {
-  max-height: 100px; /* Set a larger max-height on hover */
+  max-height: 100px;
 }
 .wrapper {
   max-width: 75%;
